# rede-neural

./: README.md  jupyter.ipynb  pyproject.toml
