[tool.poetry]
name = "rede-neural"
version = "0.1.0"
description = ""
authors = ["jadelcruz1 <jardelcruz6@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
scikit-learn = "^1.5.2"
streamlit = "^1.39.0"
pandas = "^2.2.3"
matplotlib = "^3.9.2"
numpy = "^2.1.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
